Fix: Separate collapsable and search history behaviour (#2523)
* fix: separate collapsable and search history with separate boolean inputs
* removed unused class .with-search-history

--- a/projects/components/src/search-box/search-box.component.scss
+++ b/projects/components/src/search-box/search-box.component.scss
@@ -31,7 +31,7 @@
     }
   }
 
-  &.with-search-history {
+  &.collapsable {
     width: 48px;
 
     .input {
